[package]
name = "rs-cor-macros"
version = "0.1.0"
edition = "2024"
authors = ["Hayley Dodkins <u21528790@tuks.co.za>"]
description = "Proc macros for the rs-cor Chain of Responsibility library"
repository = "https://github.com/hayley-d/cor"
license-file = "../../LICENSE"

[lib]
name = "macros_lib"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0", features = ["full"] }
